--- a/css/style.css
+++ b/css/style.css
@@ -16,3 +16,124 @@ h2 {
 	font-size: 30px;
 	line-height: 42px;
 }
+
+.clearfix::after {
+	content: "";
+	display: table;
+	clear: both;
+}
+
+.main-header {
+	margin-bottom: 60px;
+	outline: solid rgba(0, 128, 0, 1) 3px;
+	background: rgba(0, 128, 0, 0.2);
+}
+
+.container {
+	width: 940px;
+	margin: 0 auto;
+	padding: 0 10px;
+	outline: solid rgba(0, 128, 0, 1) 3px;
+	background: rgba(0, 128, 0, 0.2);
+}
+
+.main-navigation {
+	float: left;
+	width: 780px;
+	min-height: 70px;
+	outline: solid rgba(128, 128, 0, 1) 3px;
+	background: rgba(128, 128, 0, 0.2);
+}
+
+.user-block {
+	float: right;
+	width: 140px;
+	min-height: 70px;
+	outline: solid rgba(128, 128, 0, 1) 3px;
+	background: rgba(128, 128, 0, 0.2);
+}
+
+.index-logo {
+	width: 368px;
+	height: 204px;
+	margin-left: auto;
+	margin-right: auto;
+	margin-bottom: 25px;
+	outline: solid rgba(128, 0, 0, 1) 3px;
+	background: rgba(128, 0, 0, 0.2);
+}
+
+.features {
+	margin-bottom: 80px;
+	outline: solid rgba(128, 0, 0, 1) 3px;
+	background: rgba(128, 0, 0, 0.2);
+}
+
+.features-item {
+	float: left;
+	width: 300px;
+	min-height: 175px;
+	margin-right: 20px;
+	outline: solid rgba(128, 128, 0, 1) 3px;
+	background: rgba(128, 128, 0, 0.2);
+}
+
+.features-item:last-child {
+	margin-right: 0px;
+}
+
+.index-content {
+	margin-bottom: 35px;
+	padding: 50px 80px;
+	outline: solid rgba(128, 0, 0, 1) 3px;
+	background: rgba(128, 0, 0, 0.2);
+}
+
+.index-content-left {
+	float: left;
+	width: 380px;
+	min-height: 330px;
+	outline: solid rgba(128, 128, 0, 1) 3px;
+	background: rgba(128, 128, 0, 0.2);
+}
+
+.index-content-right {
+	float: right;
+	width: 300px;
+	min-height: 330px;
+	outline: solid rgba(128, 128, 0, 1) 3px;
+	background: rgba(128, 128, 0, 0.2);
+}
+
+.main-footer {
+	padding-top: 60px;
+	padding-bottom: 40px;
+	margin-top: 65px;
+	outline: solid rgba(0, 128, 0, 1) 3px;
+	background: rgba(0, 128, 0, 0.2);
+}
+
+.footer-contacts {
+	float: left;
+	width: 320px;
+	margin-right: 60px;
+	min-height: 90px;
+	outline: solid rgba(128, 128, 0, 1) 3px;
+	background: rgba(128, 128, 0, 0.2);
+}
+
+.footer-social {
+	float: left;
+	width: 180px;
+	min-height: 90px;
+	outline: solid rgba(128, 128, 0, 1) 3px;
+	background: rgba(128, 128, 0, 0.2);
+}
+
+.footer-copyright {
+	float: right;
+	width: 180px;
+	min-height: 90px;
+	outline: solid rgba(128, 128, 0, 1) 3px;
+	background: rgba(128, 128, 0, 0.2);
+}
