--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,12 @@
 body {
-	margin: 0;
-	padding: 0;
+	min-width: 960px;
+	font-weight: 700;
 	font-size: 14px;
 	line-height: 24px;
-	color: 000;
-	font-weight: bold;
+	font-family: "PT Sans Narrow", "Arial", sans-serif;
+	color: #ffffff;
 	text-transform: uppercase;
-	font-family: "PT Sans Narrow";
+	background: #000000 url("../img/body-bg.jpg") no-repeat center top;
 }
 
 h1 {
@@ -27,52 +27,93 @@ h2 {
 
 .main-header {
 	margin-bottom: 60px;
-	outline: solid rgba(0, 128, 0, 1) 3px;
-	background: rgba(0, 128, 0, 0.2);
+	color: #ffffff;
+	background: #000000;
 }
 
 .container {
 	width: 940px;
 	margin: 0 auto;
 	padding: 0 10px;
-	outline: solid rgba(0, 128, 0, 1) 3px;
-	background: rgba(0, 128, 0, 0.2);
 }
 
 .main-navigation {
 	float: left;
 	width: 780px;
 	min-height: 70px;
-	outline: solid rgba(128, 128, 0, 1) 3px;
-	background: rgba(128, 128, 0, 0.2);
+}
+
+.main-navigation ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  font-size: 0;
 }
 
 .main-navigation li {
 	display: inline-block;
+	font-size: 16px;
+	line-height: 20px;
+	vertical-align: top;
+}
+
+.main-navigation a {
+	display: block;
+	padding: 25px 20px;
+	color: #ffffff;
+	text-decoration: none;
+}
+
+.main-navigation a:hover {
+	background: #242424;
 }
 
 .user-block {
 	float: right;
-	width: 140px;
-	min-height: 70px;
-	outline: solid rgba(128, 128, 0, 1) 3px;
-	background: rgba(128, 128, 0, 0.2);
+	max-width: 140px;
+}
+
+.login {
+	position: relative;
+	display: inline-block;
+	padding: 25px 21px;
+	padding-left: 50px;
+	font-size: 16px;
+  line-height: 20px;
+  vertical-align: top;
+  color: #ffffff;
+  text-decoration: none;
+}
+
+.login:hover {
+	background-color: #242424;
+}
+
+.login:before {
+	content: "";
+	position: absolute;
+	top: 28px;
+	left: 16px;
+	width: 18px;
+	height: 18px;
+	background: transparent url("../img/icon-login-highlighted.png") no-repeat;
+	opacity: 0.3;
+}
+
+.login:hover:before {
+	opacity: 1;
 }
 
 .index-logo {
-	width: 368px;
-	height: 204px;
-	margin-left: auto;
-	margin-right: auto;
-	margin-bottom: 25px;
-	outline: solid rgba(128, 0, 0, 1) 3px;
-	background: rgba(128, 0, 0, 0.2);
+	width: 358px;
+	height: 202px;
+	margin: 0 auto;
+	margin-top: 62px;
+	margin-bottom: 22px;
 }
 
 .features {
-	margin-bottom: 80px;
-	outline: solid rgba(128, 0, 0, 1) 3px;
-	background: rgba(128, 0, 0, 0.2);
+	margin-bottom: 77px;
 }
 
 .features-item {
@@ -80,43 +121,191 @@ h2 {
 	width: 300px;
 	min-height: 175px;
 	margin-right: 20px;
-	outline: solid rgba(128, 128, 0, 1) 3px;
-	background: rgba(128, 128, 0, 0.2);
+	text-align: center;
 }
 
 .features-item:last-child {
 	margin-right: 0px;
 }
 
+.features-name {
+	position: relative;
+	display: block;
+	margin-bottom: 25px;
+	padding-bottom: 35px;
+	font-size: 30px;
+	line-height: 42px;
+}
+
+.features-item p {
+	margin: 10px;
+	margin-bottom: 0;
+}
+
+.features-name:after {
+	content: "";
+	position: absolute;
+	bottom: 2px;
+	left: 50%;
+	display: block;
+	width: 20px;
+	height: 20px;
+	margin-left: -10px;
+	background: #ffffff;
+	transform: rotate(45deg);
+}
+
 .index-content {
 	margin-bottom: 35px;
 	padding: 50px 80px;
-	outline: solid rgba(128, 0, 0, 1) 3px;
-	background: rgba(128, 0, 0, 0.2);
+	color: #000000;
+	background: url("../img/content-shadow.png") no-repeat center,
+	#f8f5f2 url("../img/texture-light.jpg");
 }
 
 .index-content-left {
 	float: left;
 	width: 380px;
-	min-height: 330px;
-	outline: solid rgba(128, 128, 0, 1) 3px;
-	background: rgba(128, 128, 0, 0.2);
 }
 
 .index-content-right {
 	float: right;
 	width: 300px;
-	min-height: 330px;
-	outline: solid rgba(128, 128, 0, 1) 3px;
-	background: rgba(128, 128, 0, 0.2);
+}
+
+.index-content-title {
+	margin: 0;
+	margin-top: -5px;
+	margin-bottom: 20px;
+	font-size: 30px;
+	line-height: 42px;
+}
+
+.index-content p {
+	margin: 0;
+	margin-bottom: 25px;
+}
+
+.news-preview {
+	margin: 0;
+	margin-bottom: 30px;
+	padding: 0;
+	padding-right: 35px;
+	list-style: none;
+}
+
+.news-preview li {
+	margin-bottom: 20px;
+}
+
+.news-preview p {
+	margin-bottom: 0;
+}
+
+.news-preview time {
+	text-transform: none;
+}
+
+.btn {
+	display: inline-block;
+	margin-right: 16px;
+	padding: 10px 33px;
+	font-weight: 700;
+	font-size: 14px;
+	line-height: 24px;
+	font-family: "PT Sans Narrow", "Arial", sans-serif;
+	vertical-align: top;
+	text-align: center;
+	color: #ffffff;
+	text-transform: uppercase;
+	text-decoration: none;
+	background-color: #000000;
+	border: none;
+	outline: none;
+	cursor: pointer;
+}
+
+.btn:hover,
+.btn:active {
+	background-color: #663d15;
+}
+
+.btn.disabled,
+.btn:disabled {
+	cursor: default;
+	opacity: 0.5;
+}
+
+.btn.disabled:hover,
+.btn:disabled:hover {
+	background: #000000;
+}
+
+.gallery {
+	position: relative;
+	height: 260px;
+}
+
+.gallery-content {
+	height: 164px;
+	margin: 0;
+	background-color: #cccccc;
+	border: 7px solid #ffffff;
+}
+
+.gallery-content img {
+	width: 286px;
+	height: 164px;
+}
+
+.gallery .btn {
+	position: absolute;
+	bottom: 0;
+	width: 140px;
+	margin: 0;
+}
+
+.gallery-prev {
+	left: 0;
+}
+
+.gallery-next {
+	right: 0;
+}
+
+.appointment-form input {
+	float: left;
+	width: 106px;
+	margin-right: 20px;
+	margin-bottom: 20px;
+	padding: 7px 15px;
+  font: inherit;
+  color: inherit;
+  text-transform: inherit;
+	background-color: #f9f6f3;
+	border: 2px solid #000000;
+	outline: none;
+}
+
+.appointment-form input:focus {
+	border: 2px solid #663d15;
+}
+
+.appointment-form input:nth-child(2n) {
+	margin-right: 0;
+}
+
+.appointment-form .btn {
+	clear: both;
+	width: 100%;
 }
 
 .main-footer {
 	padding-top: 60px;
-	padding-bottom: 40px;
 	margin-top: 65px;
-	outline: solid rgba(0, 128, 0, 1) 3px;
-	background: rgba(0, 128, 0, 0.2);
+	padding-bottom: 40px;
+	color: #ffffff;
+	background: #252525 url("../img/texture-dark.jpg")
 }
 
 .footer-contacts {
@@ -124,24 +313,54 @@ h2 {
 	width: 320px;
 	margin-right: 60px;
 	min-height: 90px;
-	outline: solid rgba(128, 128, 0, 1) 3px;
-	background: rgba(128, 128, 0, 0.2);
+}
+
+.footer-contacts a {
+	color: #ffffff;
+}
+
+.footer-contacts:hover a {
+	text-decoration: none;
 }
 
 .footer-social {
 	float: left;
 	width: 180px;
 	min-height: 90px;
-	outline: solid rgba(128, 128, 0, 1) 3px;
-	background: rgba(128, 128, 0, 0.2);
 }
 
 .footer-copyright {
 	float: right;
 	width: 180px;
 	min-height: 90px;
-	outline: solid rgba(128, 128, 0, 1) 3px;
-	background: rgba(128, 128, 0, 0.2);
+}
+
+.footer-social p {
+	margin: 0;
+	margin-bottom: 15px;
+	text-align: center;
+}
+
+.social-btn {
+	display: inline-block;
+	width: 43px;
+	height: 43px;
+	margin: 0 2px;
+	font-size: 0;
+	vertical-align: top;
+	text-decoration: none;
+}
+
+.social-btn-vk {
+  background: #000000 url("../img/icon-vk.png") no-repeat center;
+}
+
+.social-btn-fb {
+  background: #000000 url("../img/icon-fb.png") no-repeat center;
+}
+
+.social-btn-inst {
+  background: #000000 url("../img/icon-inst.png") no-repeat center;
 }
 
 .catalog-content-title {
